--- a/resources/sass/_app/components/_chat.scss
+++ b/resources/sass/_app/components/_chat.scss
@@ -18,7 +18,7 @@ $chat-mobile-sidebar-width: 280px;
 $chat-mobile-sidebar-sm-width: 240px;
 
 
-.chat-wrapper{
+.chat-wrapper {
   @include clearfix;
   background-color: $white;
   position: relative;
@@ -28,8 +28,8 @@ $chat-mobile-sidebar-sm-width: 240px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   width: 100%;
   min-width: 290px;
-  height: 95vh;
-  min-height: 300px;
+  height: 70vh;
+  min-height: 200px;
   max-height: 720px;
   overflow: hidden;
   display: flex;
@@ -445,4 +445,14 @@ $chat-mobile-sidebar-sm-width: 240px;
   height: 18px;
   font-size: 12px;
   line-height: 18px;
+}
+@media (min-width: 768px) {
+  .chat-wrapper {
+    height: 75vh;
+  }
+}
+@media (min-width: 992px) {
+  .chat-wrapper {
+    height: 79vh;
+  }
 }
